# toloboy

./: .gitignore  .pre-commit-config.yaml  LICENCE  pyproject.toml
.github/workflows/: cookiecutter.yml
src/: .cruft.json
src/toloboy/: toloboy.py
tests/: test_transformers.py
toloboy/: .cruft.json  LICENSE  README.md  mkdocs.yml  pyproject.toml
toloboy/docs/: api_docs.md
